css/style.css
/* ... */
footer {
    background-color: hsl(229, 24%, 28%);
    padding: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1200px;
}


.easybank-footer-logo {
    display: block;
    width: 8.5rem;
    margin: 0 auto;
    margin-bottom: 2rem;
}

.social-logos {
    margin-bottom: 2rem;
}

.social-logos ul {
    display: flex;
    justify-content: space-between;
    width: 10rem;
}


.social-logos ul li a img {
    width: 1.5rem;
}

.s-i:hover,
.s-i:focus {
    filter: invert(27%) sepia(51%) saturate(6500%) hue-rotate(80deg) brightness(200%) contrast(60%);
}

.footer-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    font-size: .9rem;
    margin-bottom: 1.5rem;
}

.footer-menu div ul li {
    margin-bottom: 1.3rem;
}

.footer-menu div ul li a:hover,
.footer-menu div ul li a:focus {
    color: hsl(136, 65%, 51%);
}

.footer-menu-first {
    width: 100%;
}


.footer-link {
    font-weight: 600;
    color: rgba(255, 255, 255, 1);
    
}


.copyright {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.copyright .request-invite-btn {
    margin-bottom: 1.5rem;
}

.copyright-content {
    font-size: .9rem;
    font-weight: 300;
    color: rgba(255, 255, 255, .5);
}





/* 350 */

@media (min-width: 350px) {
    .mockup-background img  {
        top: -100px;
    }
    .intro-mockups img {
        top: -95px;
    }
    .mockup-section {
        height: 300px;;
    }
}



/* 375 */

@media (min-width: 375px) {
    .intro-content {
        padding-right: 3rem;
        padding-left: 3rem;
    }
    .choose-bank-section {
        padding-right: 3rem;
        padding-left: 3rem;
    }
    .intro-content-text { 
        margin-bottom: 3rem;
    }
    .latest-articles {
        padding-left: 3rem;
        padding-right: 3rem;
    }
    .mockup-background img  {
        top: -100px;
    }
    .intro-mockups img {
        top: -95px;
    }
    .mockup-section {
        height: 350px;
    }
}


@media (min-width:436px) {
    .mockup-background img  {
        top: -60px;
    }
    .intro-mockups img {
        top: -86px;
    }
    .mockup-section {
        height: 400px;
    }   
}



@media (min-width: 475px) {
    .mockup-section {
        height: 450px;
    }   
    .intro-content {
        padding-right: 6rem;
        padding-left: 6rem;
    }
    .choose-bank-section {
        padding-right: 5rem;
        padding-left: 5rem;
    }
    .latest-articles {
        padding-left: 3rem;
        padding-right: 3rem;
    }
}



@media (min-width: 520px) {
    .mockup-background img  {
        top: -140px;
    }
    .intro-mockups img {
        top: -168px;
    }
    .mockup-section {
        height: 450px;
    } 
    
    .intro-content {
        padding-right: 6rem;
        padding-left: 6rem;
    }
    .choose-bank-section {
        padding-right: 7rem;
        padding-left: 7rem;
    }
    .latest-articles {
        padding-left: 3rem;
        padding-right: 3rem;
    }
}

@media (min-width: 590px) {
    .mockup-background img  {
        top: -190px;
    }
    .intro-mockups img {
        top: -238px;
    }
    .mockup-section {
        height: 460px;
    } 

    .intro-content-text {
        font-size: 1rem
    }

    .intro-content-heading {
        font-size: 2.5rem;
    }

    .intro-content {
        padding-right: 5rem;
        padding-left: 5rem;
    }

    .choose-bank-section {
        padding-right: 7rem;
        padding-left: 7rem;
    }

    .latest-articles {
        padding-left: 4rem;
        padding-right: 4rem;
    }

    .choose-bank-heading {
        font-size: 2.1rem;
    }
    .choose-bank-content {
        font-size: 1rem;
    }
    .choose-bank-card-heading {
        font-size: 1.2rem;
    }

    .choose-bank-card-content {
        font-size: 1rem;
    }

    .latest-articles-heading {
        font-size: 2.1rem;
    }

    .latest-article-card-author {
        font-size: 0.8rem;
    }
    .latest-article-card-heading {
        font-size: 1.2rem;
    }
    .latest-article-card-text {
        font-size: 1rem;
    }
}


@media (min-width: 660px) {
    .mockup-background img  {
        top: -260px;
    }
    .intro-mockups img {
        top: -310px;
    }
    .mockup-section {
        height: 460px;
    }
    .intro-content {
        padding-right: 7rem;
        padding-left: 7rem;
    }
    .choose-bank-section {
        padding-right: 10rem;
        padding-left: 10rem;
    }
    .latest-articles {
        padding-left: 5rem;
        padding-right: 5rem;
    }
}




@media (min-width: 720px) {
    .mockup-background img  {
        top: -290px;
    }
    .intro-mockups img {
        top: -370px;
    }
    .mockup-section {
        height: 480px;
    }
    .intro-content {
        padding-right: 9rem;
        padding-left: 9rem;
    }
    .choose-bank-section {
        padding-right: 12rem;
        padding-left: 12rem;
    }
    .latest-articles {
        padding-left: 5rem;
        padding-right: 5rem;
    }
}
/* ... */

